changing granim to fixed to make sure it's always stretched to viewport

--- a/css/hfd.css
+++ b/css/hfd.css
@@ -658,11 +658,13 @@ picture {
   display: block;
 }
 
-html,
+html {
+  height: 100%;
+}
+
 body {
   display: flex;
   flex-direction: column;
-  width: 100%;
   height: 100%;
   background: var(--color-page-bg);
   font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -670,10 +672,6 @@ body {
   font-weight: normal;
   line-height: 1.4;
   color: var(--color-text-primary);
-}
-
-body {
-  overflow: hidden;
 }
 
 a {
@@ -778,7 +776,7 @@ h6 {
   }
 }
 #granim-canvas-wrapper {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
@@ -884,7 +882,7 @@ h6 {
   align-items: center;
   overflow: hidden;
   border-radius: 9999rem;
-  bottom: -64px;
+  bottom: -72px;
   left: 16px;
   width: calc(100vw - 32px);
   height: 64px;
@@ -899,7 +897,7 @@ h6 {
 }
 @media (min-width: 768px) {
   .tmpl-nav {
-    top: -64px;
+    top: -72px;
     bottom: auto;
     left: 50%;
     width: 376px;
@@ -976,13 +974,8 @@ h6 {
 }
 
 .tmpl-main {
-  flex: 1 1 auto;
+  flex: 1 0 auto;
   position: relative;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
   opacity: 0;
   transition: all 0.75s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
